--- a/src/Asteroids/Storage/GameControlStage.fxml
+++ b/src/Asteroids/Storage/GameControlStage.fxml
@@ -5,6 +5,6 @@
 <AnchorPane fx:controller="Asteroids.Storage.GameControlStageController" xmlns:fx="http://javafx.com/fxml">
     <HBox prefHeight="50" minWidth="880" alignment="TOP_LEFT" spacing="10" xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: gray;">
         <padding><Insets top="15" right="15" bottom="15" left="15"/></padding>
-        <Button id="btnExit" prefWidth="80" text="Exit" onAction="#handleExit" fx:id="btnExit" />
+        <Button id="btnQuit" prefWidth="80" text="Quit" onAction="#handleQuit" fx:id="btnQuit" />
     </HBox>
 </AnchorPane>
