--- a/src/Asteroids/Storage/GameControlStage.fxml
+++ b/src/Asteroids/Storage/GameControlStage.fxml
@@ -3,8 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <AnchorPane fx:controller="Asteroids.Storage.GameControlStageController" xmlns:fx="http://javafx.com/fxml">
-    <HBox prefHeight="50" minWidth="880" alignment="TOP_LEFT" spacing="10" xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: gray;">
+    <HBox prefHeight="50" minWidth="800" alignment="TOP_LEFT" spacing="10" xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: gray;">
         <padding><Insets top="15" right="15" bottom="15" left="15"/></padding>
+        <Button id="btnNew" prefWidth="80" text="New" onAction="#handleNew" fx:id="btnNew" />
         <Button id="btnQuit" prefWidth="80" text="Quit" onAction="#handleQuit" fx:id="btnQuit" />
     </HBox>
 </AnchorPane>
