--- a/src/Asteroids/Storage/GameFieldStage.fxml
+++ b/src/Asteroids/Storage/GameFieldStage.fxml
@@ -1,5 +1,5 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.canvas.Canvas?>
 <AnchorPane fx:controller="Asteroids.Storage.GameFieldStageController" xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: black;">
-    <Canvas id="LayerStarryStar" height="600" width="800" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0" fx:id="LayerStarryStar" />
+    <Canvas id="LayerStarryStar" width="800" height="640" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0" fx:id="LayerStarryStar" />
 </AnchorPane>
